# whisky-is-all-you-need

./: README.md
whisky-crawler/: Cargo.toml  README.md
whisky-crawler/src/: data.rs  main.rs  util.rs  whiskyauction.rs  whiskyauctioneer.rs  whiskybase.rs
whiskybase-crawler/: Cargo.toml
whiskybase-crawler/src/: data.rs  main.rs  util.rs  whiskybase.rs
